--- a/magicmethods.html
+++ b/magicmethods.html
@@ -14,7 +14,7 @@
 <h3>Rafe Kettler</h3>
 <p>Copyright &copy; 2011 Rafe Kettler</p>
 
-<p>Version 1.10</p>
+<p>Version 1.11</p>
 <p>The magic methods guide has a git repository at <a href="http://www.github.com/RafeKettler/magicmethods">http://www.github.com/RafeKettler/magicmethods</a>. Any issues can be reported there, along with comments, (or even contributions!).</p>
 <p><strong><a id="table" href="#table">Table of Contents</a></strong></p>
 <dl>
@@ -34,7 +34,8 @@
 <dt><a href="#pickling">Pickling your Objects</a></dt>
 <dt><a href="#conclusion">Conclusion</a></dt>
 <dt><a href="#appendix">Appendix: How to Call Magic Methods</a></dt>
-</dl><h2><a id="intro" href="#intro">Introduction</a></h2>
+</dl>
+<h2><a id="intro" href="#intro">Introduction</a></h2>
 <p>This guide is the culmination of a few months' worth of blog posts. The subject is <strong>magic methods</strong>.</p>
 <p>What are magic methods? They're everything in object-oriented Python. They're special methods that you 
 can define to add "magic" to your classes. They're always surrounded by double underscores (e.g. 
@@ -431,7 +432,8 @@ to from other languages (Haskell, for example).</p>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">values</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">values</span> <span class="ow">is</span> <span class="bp">None</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">values</span> <span class="o">=</span> <span class="p">[]</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">values</span> <span class="o">=</span> <span class="n">values</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">values</span> <span class="o">=</span> <span class="n">values</span>
 
     <span class="k">def</span> <span class="nf">__len__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
